test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_types/void/assign_to_void_var.plx
extrn v1: none;

pub fn main(none) i32 {
    #  in our implementation, you can't declare void variables
    #  the standard is ambiguous about whether this is legal,
    #  but you definitely can't declare a void variable and assign to it
    v1 = cast<none>(0)
    return nil
}
